--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.6.0</version>
+  <version>1.6.1-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -41,8 +41,8 @@
 
   <properties>
     <opensaml.version>3.4.0</opensaml.version>
-    <opensaml-ext.version>1.2.2</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.1</opensaml.swedish-eid.version>
+    <opensaml-ext.version>1.2.3</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.2.2</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.4.1</shibboleth.version>
     <shibboleth.java-support.version>7.4.1</shibboleth.java-support.version>
@@ -56,7 +56,7 @@
     <spring.webflow.version>2.4.8.RELEASE</spring.webflow.version>
     <spring.mobile.version>1.1.5.RELEASE</spring.mobile.version>
     
-    <jackson.version>2.9.7</jackson.version>
+    <jackson.version>2.9.8</jackson.version>
 
     <slf4j.version>1.7.25</slf4j.version>
     <junit.version>4.12</junit.version>
